--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "url": "https://github.com/TheBITLINK/ytdl-getinfo/issues"
   },
   "homepage": "https://github.com/TheBITLINK/ytdl-getinfo#readme",
-  "dependencies": {},
+  "dependencies": {
+    "request": "^2.81.0"
+  },
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
