--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "homepage": "https://github.com/TheBITLINK/ytdl-getinfo#readme",
   "dependencies": {
-    "request": "^2.81.0"
+    "axios": "^0.21.1"
   },
   "devDependencies": {
     "chai": "^4.3.4",
